# batch_api

./: .gitignore  .pylintrc  Dockerfile  Makefile  README.md  audit_operations.csv  batch_submit.py  idp_description_mitre_dump.csv  office_suite_description_mitre_dump.csv  pyproject.toml  requirements.txt  setup.py  submit_summary.py  test.md  threat_model.md
.github/workflows/: ci-test.yml  publish-release.yml  update-actions.yml  version-bump.yml
docs/: README.md  advanced_usage.md  configuration.md  getting_started.md  summary_feature.md  templates.md
src/tests/: __init__.py  test_config.py  test_data_processor.py  test_generator.py  test_imports.py  test_main.py  test_prompts.py
src/threat_model/: __init__.py  __main__.py
src/threat_model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/threat_model/core/: __init__.py  batch_processor.py  config.py  data_processor.py  data_value.py  generator.py  submit_summary.py  summary_processor.py
src/threat_model/core/schema/: summary_schema.json
src/threat_model/prompts/: __init__.py  templates.yaml
tests/: __init__.py  test_batch_processor.py  test_config.py  test_data_processor.py  test_generator.py  test_imports.py  test_main.py  test_prompts.py
