[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "threat_model"
version = "0.2.0"
authors = [
    { name="Wyatt Roersma" },
]
description = "Threat model generation for Microsoft 365 and Entra ID"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "anthropic>=0.45.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "numpy>=2.2.2",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.5",
    "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-xdist>=3.3.0",
    "pytest-cov>=6.0.0",
    "pytest-html>=4.1.1",
    "pytest-timeout>=2.3.1",
    "pytest-sugar>=1.0.0",
    "pylint>=3.3.4",
    "black>=25.1.0",
    "mypy>=1.15.0",
    "bandit>=1.8.2",
    "safety>=3.2.14"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
threat_model = ["prompts/*.yaml"]

[tool.black]
line-length = 120
target-version = ['py313']
include = '\.pyi?$'

[tool.pylint]
init-hook='import sys; sys.path.append("src")'
ignore-patterns=["test_.*?py"]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "E0401",  # import-error
    "E1101",  # no-member
    "W1514",  # Using open without explicitly specifying an encoding (unspecified-encoding)
]
extension-pkg-whitelist = ["numpy", "pandas", "sklearn"]
generated-members = ["numpy.*", "pandas.*", "sklearn.*"]

[tool.pylint.format]
max-line-length = 120

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra -q --cov=threat_model --cov-report=html --html=test-reports/report.html --timeout=300"
testpaths = [
    "tests",
]